--- a/matching.tex
+++ b/matching.tex
@@ -7,7 +7,6 @@
 \usepackage{courier}
 \usepackage{graphicx}
 \usepackage{subfigure}
-\usepackage{slashbox}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{balance}
@@ -22,7 +21,7 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{property}{Property}
 
-\title {Stochastic matching in simple settings}
+\title {OptOrder: optimum serial dictatorship in stochastic matching}
 \author {Someone}
  \begin{document}
 % The file aaai.sty is the style file for AAAI Press
@@ -31,17 +30,61 @@
 
 \maketitle
 \begin{abstract}
-Motivated by applications like kidney exchange, recommendation system  and online dating, we study a matching problem with query-commit process.
-In this setting, a centralized system allocates agents into pairs. If a pair of agents accept their assignments, they are matched and leave the market.
-Otherwise, they will stay in the market.
-Most previous work focus on giving worst case guarantee on different settings. 
-However, surve
- 
+This paper studies a simplified version of stochastic matching proposed in \cite{chen2009approximating}.
+Previous study want to find the optimal policy for a matching system to maximize the cardinality of a matching.
+In that setting, an agent may reject the assigned candidate (with a certain probability) and stay in the market or leave.
+Finding the optimum policy to match meets great difficulty mainly from two aspects.
+First, there is no evidence that the optimal policy can be expressed in polynomial space.
+Second, collecting the acceptance ratio of each pair usually incurs considerable costs.
 
+To express a policy efficiently and solve the optimum solution efficiently, we choose serial dictatorship and consider the case where the acceptance ratios are identical for each pair.
+This paper aims to give an algorithm with a graph and the acceptance ratio as input and outputs a optimum order for serial dictatorship.
+We first describe a straightforward integer linear programming with $O(|E|^4)$ entries.
+Then, we reduce the number of entries to $O(|E|^2)$ by an important observation.
+Finally, in the experimental part, we compare methods to solve even larger graphs.
 
 \end{abstract}
 
 \section{Introduction}
+
+Motivated by applications like kidney exchange and online dating, \cite{chen2009approximating} defines stochastic matching.
+They show a greedy algorithm with 0.25 approximation compared to the optimal algorithm.
+The approximation ratio was improved by \cite{adamczyk2011improved,costello2012stochastic}.
+\cite{goel2012matching} 
+\cite{feldman2009online}
+
+The current setting faces two main drawbacks to prevent it from practical use.
+
+First, to know the exact probability of a prob being accepted is difficult.
+Typically, in order to know the exact probabilities, the market needs to collect many data and conduct careful analyses on historical data.
+It is worthy in important markets like kidney exchange market~\cite{dickerson2013failure,dickerson2015futurematch}.
+However, in many less important market, collecting acceptance ratios is quite costly and unworthy.
+Similar to online dating problem, let us consider a friend recommendation problem.
+Someone (called Alice) has many friends, $x$ of them are single boys and $y$ are single girls.
+Alice wants to introduce boys to girls for marriage.
+She wants to maximize the number of matched couples.
+Every boy or girl has some requirements that must be satisfied.
+However, even though a boy and a girl satisfy each other's requirements, they may still not be willing to match.
+In this case, it is hard and costly for Alice to survey the acceptance ratio of each pair.
+Similar problem also appear in other applications like roommate problem~\cite{roth1982incentive}, but never serious considered as far as we know.
+
+Second, as mentioned above, most study focus on giving worst case guarantees, compared both to the optimal solution and the offline optimum. 
+The main difficulty preventing people to desire the optimum solution is that the optimal solution maybe not able to be expressed in polynomial space.
+To solve the stochastic matching problem in practical, there is no evidence that the existing algorithms can work well enough.
+
+In this paper, a simplified setting of stochastic matching is considered, which can still be utilized to solve many real life applications.
+We assume that all the edges have the same acceptance ratio.
+This assumption avoid the difficulty in surveying the acceptance probabilities and provides an essential condition for our algorithm.
+As for the expressiveness of the solution, we improve it by serial dictatorship.
+Although, serial dictatorship may reduce the expected number of matched agents, our experimental results demonstrate that the influence is not big.
+With the solution, anyone can conduct the matching without any further help of a computer. 
+One only needs $O(1)$ computation in average for each prob.
+We are going to release our work as an open source tool. 
+With the help of this tool, anyone is able make precise decisions for stochastic matching problems around themselves. 
+
+The following part of this paper is organized as follows. Section 2 defines the serial dictatorship and show some fundamental good properties of it. Section 3 shows the construction of the integer linear programming step by step and prove its correctness. Section 4 explores methods to expand our algorithm to larger graphs. Section 5 shows our experimental results. Section 6 concludes this paper.
+
+
 \section{The setting}
 
 Our problem can be modeled in an undirected graph $G=(V,E)$, $V=\{v_1,v_2,\ldots,v_n\}$ denotes the set of agents. $e_{ij}\in E$ denotes an edge between $v_i$ and $v_j$.
