--- a/matching.bib
+++ b/matching.bib
@@ -71,3 +71,30 @@
 	year={2012},
 	organization={IEEE}
 }
+
+@article{blum2014ignorance,
+	title={Ignorance is almost bliss: Near-optimal stochastic matching with few queries},
+	author={Blum, Avrim and Haghtalab, Nika and Procaccia, Ariel D and Sharma, Ankit},
+	journal={arXiv preprint arXiv:1407.4094},
+	year={2014}
+}
+
+@inproceedings{poloczek2012randomized,
+	title={Randomized greedy algorithms for the maximum matching problem with new analysis},
+	author={Poloczek, Matthias and Szegedy, Mario},
+	booktitle={Foundations of Computer Science (FOCS), 2012 IEEE 53rd Annual Symposium on},
+	pages={708--717},
+	year={2012},
+	organization={IEEE}
+}
+
+@article{aronson1995randomized,
+	title={Randomized greedy matching. II},
+	author={Aronson, Jonathan and Dyer, Martin and Frieze, Alan and Suen, Stephen},
+	journal={Random Structures \& Algorithms},
+	volume={6},
+	number={1},
+	pages={55--73},
+	year={1995},
+	publisher={Wiley Online Library}
+}
