--- a/matching.bib
+++ b/matching.bib
@@ -98,3 +98,14 @@
 	year={1995},
 	publisher={Wiley Online Library}
 }
+
+@article{bansal2012lp,
+	title={When LP is the cure for your matching woes: Improved bounds for stochastic matchings},
+	author={Bansal, Nikhil and Gupta, Anupam and Li, Jian and Mestre, Juli{\'a}n and Nagarajan, Viswanath and Rudra, Atri},
+	journal={Algorithmica},
+	volume={63},
+	number={4},
+	pages={733--762},
+	year={2012},
+	publisher={Springer}
+}
